<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="fonts">
        <item >roboto_black.ttf</item>
        <item >roboto_bold.ttf</item>
        <item >roboto_condensed.ttf</item>
        <item >roboto_light.ttf</item>
        <item >roboto_medium.ttf</item>
        <item >roboto_regular.ttf</item>
        <item >digitalstrip.ttf</item>
        <item >facebook.otf</item>
    </string-array>
    
    <string name="app_name">Guess The Character: One Piece</string>
    <string name="app_alias">Guess The Character</string>
    <string name="app_version">Version 2.0 [Trafalgar Law]</string>
   
    <string name="empty"></string>
    <string name="label_play">Play</string>
    <string name="label_about">About Us</string>
    <string name="label_reset">Reset Data</string>
    <string name="label_level">Level: </string>
	<string name="label_round_end">AWESOME!</string>
	<string name="label_continue">CONTINUE</string>
	<string name="label_gold">Gold</string>
	<string name="startLevel">1</string>
	<string name="startGold">50</string>
	<string name="label_confirm">OK</string>
	<string name="label_cancel">Cancel</string>
	<string name="label_close">Close</string>
	<string name="label_loading">Loading&#8230;</string>
	<string name="label_share">Post</string>
	<string name="label_social">facebook</string>
	<string name="label_social_message">Ask your facebook friends for help?</string>
	<string name="label_signin">Sign In</string>
	<string name="label_signout">Sign Out</string>
	<string name="label_next">Next</string>
	
    <string name="popup_display_1">You\'ve solved the Puzzle!</string>
    <string name="popup_display_2_1">Receive </string>
    <string name="popup_display_2_2"> Gold!</string>
    
    <string name="finish_display_1">You\'ve solved all the Puzzle!</string>
    <string name="finish_display_2">Stay tuned for the next update!</string>
    <string name="dev_quote">\"Learning Through Practice\"</string>
    <string name="changelog">Changelog</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="dev_name">JP</string>    
    <string name="dev_position">Designer/Graphics/Programmer/Tester</string>    
    <string name="label_credits">Credits</string>
    <string name="label_visit">Visit</string>
    <string name="label_rate">Rate &amp; Review</string>
    <string name="rate_detail">Like this Game? Do you have any feedbacks or violent reaction? Write a review and tell us what you feel about this app.</string>
</resources>