<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@drawable/tile_bg" >

    <ImageView
        android:id="@+id/badge"
        android:layout_width="match_parent"
        android:layout_height="@dimen/badge_height"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/empty"
        android:src="@drawable/law_congrats" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/menu_btn"
        android:layout_marginBottom="@dimen/margin_medium"
        android:text="@string/label_continue"
        android:textSize="@dimen/font_large"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/banner_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/mine_shaft"
        android:gravity="center"
        android:text="@string/label_round_end"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="@dimen/font_xlarge" />

    <ViewFlipper
        android:id="@+id/descFlipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/badge"
        android:layout_below="@id/banner"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@color/translucent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/titleLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:gravity="center"
                android:text="@string/finish_display_1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="@dimen/font_xlarge"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/finishLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/finish_display_2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_margin="@dimen/margin_small"
                android:textSize="@dimen/font_large"
                android:textColor="@color/white" />
        </LinearLayout>

        <ImageView
            android:id="@+id/toBeContinued"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/black"
            android:contentDescription="@string/empty"
            android:src="@drawable/to_be_continued" />
    </ViewFlipper>

</RelativeLayout>