<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tile_bg"
    android:scrollbars="vertical" >

    <ImageView
        android:id="@+id/dev_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_button"
        android:layout_centerHorizontal="true"
        android:background="@color/mine_shaft"
        android:contentDescription="@string/empty"
        android:scaleType="centerInside"
        android:src="@drawable/logo_dark" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/menu_btn"
        android:text="@string/label_next"
        android:textColor="@color/white"
        android:textSize="@dimen/font_large" />

    <ViewFlipper
        android:id="@+id/flipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/backButton"
        android:layout_below="@+id/dev_logo"
        android:layout_margin="@dimen/margin_small" >

        <!-- Game Info -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/font_letter" />

            <TextView
                android:id="@+id/appVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/app_version"
                android:textColor="@color/white"
                android:textSize="@dimen/font_letter" />

            <TextView
                android:id="@+id/changeLogLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appVersion"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/changelog"
                android:textColor="@color/white"
                android:textSize="@dimen/font_large" />

            <TextView
                android:id="@+id/changeLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/changeLogLabel"
                android:layout_marginTop="@dimen/margin_medium"
                android:maxLines="100"
                android:scrollbars="vertical"
                android:textColor="@color/white"
                android:textSize="@dimen/font_snormal" />
        </RelativeLayout>

        <!-- Disclaimer -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/disclaimerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/disclaimer"
                android:textColor="@color/white"
                android:textSize="@dimen/font_letter" />

            <TextView
                android:id="@+id/disclaimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/disclaimerLabel"
                android:layout_marginTop="@dimen/margin_large"
                android:maxLines="100"
                android:scrollbars="vertical"
                android:textColor="@color/white"
                android:textSize="@dimen/font_snormal" />
        </RelativeLayout>
        <!-- Developer -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/devLogo"
                android:layout_width="@dimen/avatar_height"
                android:layout_height="@dimen/avatar_height"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/empty"
                android:src="@drawable/dev_final_vectorized" />

            <TextView
                android:id="@+id/devName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/devLogo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/dev_name"
                android:textColor="@color/white"
                android:textSize="@dimen/font_xlarge" />

            <TextView
                android:id="@+id/devPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/devName"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="@string/dev_position"
                android:textColor="@color/white"
                android:textSize="@dimen/font_large" />

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/devPosition"
                android:layout_marginTop="@dimen/margin_large"
                android:gravity="center_horizontal"
                android:maxLines="100"
                android:scrollbars="vertical"
                android:textColor="@color/white"
                android:textSize="@dimen/font_snormal" />
        </RelativeLayout>

        <!-- Credits -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/creditsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:gravity="center_horizontal"
                android:text="@string/label_credits"
                android:textColor="@color/white"
                android:textSize="@dimen/font_xlarge"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/credits"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/creditsLabel"
                android:cacheColorHint="@android:color/transparent"
                android:divider="@android:color/transparent"
                android:dividerHeight="@dimen/font_snormal" />
        </RelativeLayout>

        <!-- Rate and Review / Join the Team -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/rateReviewLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:gravity="center_horizontal"
                android:text="@string/rate_detail"
                android:textColor="@color/white"
                android:textSize="@dimen/font_large" />

            <Button
                android:id="@+id/rateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rateReviewLabel"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/menu_btn"
                android:text="@string/label_rate"
                android:textColor="@color/white"
                android:textSize="@dimen/font_xlarge" />
        </RelativeLayout>
    </ViewFlipper>

</RelativeLayout>