<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="@dimen/popup_width"
        android:layout_height="@dimen/small_popup_height"
        android:layout_centerInParent="true"
        android:background="@color/white"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/margin_small"
            android:textColor="@color/white" >

            <Button
                android:id="@+id/okButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/margin_xsmall"
                android:layout_weight="1"
                android:background="@drawable/menu_btn"
                android:text="@string/label_share"
                android:textColor="@color/white"
                android:textSize="@dimen/font_large" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_margin="@dimen/margin_xsmall"
                android:layout_weight="1"
                android:background="@drawable/menu_btn"
                android:text="@string/label_cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/font_large" />
        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/banner_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@color/chambray"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:textSize="@dimen/font_xlarge"
            android:text="@string/label_social" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/buttons"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:gravity="center"
            android:textColor="@color/black"
            android:textIsSelectable="false"
            android:textSize="@dimen/font_snormal"
            android:text="@string/label_social_message" />
    </RelativeLayout>

</RelativeLayout>