<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tile_bg" >

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/banner_height"
        android:layout_alignParentTop="true"
        android:background="@color/mine_shaft"
        android:gravity="center"
        android:text="@string/app_alias"
        android:textColor="@color/white"
        android:textIsSelectable="false"
        android:textSize="@dimen/font_xlarge" />

    <LinearLayout
        android:id="@+id/otherButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/box_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_small"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/menu_btn"
            android:text="@string/label_about"
            android:textColor="@color/white"
            android:textSize="@dimen/font_large"
            android:layout_marginRight="@dimen/margin_xsmall"
            android:layout_weight="1" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/menu_btn"
            android:text="@string/label_reset"
            android:textColor="@color/white"
            android:textSize="@dimen/font_large"
            android:layout_marginLeft="@dimen/margin_xsmall"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/facebookButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_above="@id/otherButtonContainer"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/fb_btn"
        android:text="@string/label_signin"
        android:textColor="@color/white"
        android:textSize="@dimen/font_xlarge" />
    
    <Button
        android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_above="@id/facebookButton"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/menu_btn"
        android:text="@string/label_play"
        android:textColor="@color/white"
        android:textSize="@dimen/font_xlarge" />

    <View
        android:id="@+id/bottomBar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_above="@id/playButton"
        android:background="@color/mine_shaft" />
       
    <ImageView
        android:id="@+id/imageBG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomBar"
        android:layout_below="@id/banner"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/empty"
        android:scaleType="centerCrop"
        android:src="@drawable/ph_bg" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/banner"
        android:layout_above="@id/bottomBar"
        android:scaleType="fitEnd"
        android:src="@drawable/law" />
    
    <ImageView
        android:id="@+id/levelIndicator"
        android:layout_width="@dimen/button_dimen"
        android:layout_height="@dimen/button_dimen"
        android:layout_above="@id/playButton"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_small"
        android:background="@color/white"
        android:contentDescription="@string/empty"
        android:padding="@dimen/margin_xsmall"
        android:scaleType="fitXY"
        android:src="@drawable/purple_btn" />

    <TextView
        android:id="@+id/currLevelLabel"
        android:layout_width="@dimen/button_dimen"
        android:layout_height="@dimen/button_dimen"
        android:layout_above="@id/playButton"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_small"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="@dimen/font_large" />


</RelativeLayout>